--- a/src/main/resources/com/mycompany/mylogin/Scene2.fxml
+++ b/src/main/resources/com/mycompany/mylogin/Scene2.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.mylogin.Scene2Controller">
    <children>
-      <Label fx:id="nameLabel" layoutX="285.0" layoutY="190.0" />
+      <Label fx:id="nameLabel" layoutX="14.0" layoutY="366.0" prefHeight="19.0" prefWidth="16.0" />
+      <Rectangle fx:id="rect1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="27.0" layoutX="69.0" layoutY="77.0" stroke="BLACK" strokeType="INSIDE" width="99.0" />
+      <ImageView fx:id="tank" fitHeight="65.0" fitWidth="170.0" layoutX="47.0" layoutY="159.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../java/com/mycompany/mylogin/tank.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
